outputs/main/reevo-qd_bpp_online_2025-07-26_01-19-44/problem_iter2_response4.txt_stdout.txt
Traceback (most recent call last):
  File "/home/dokhanhnam1199/QD/problems/bpp_online/eval.py", line 9, in <module>
    from gpt import priority_v2 as priority
  File "/home/dokhanhnam1199/QD/problems/bpp_online/gpt.py", line 34
    sorted capacities = np.sort(remaining_capacity_after_item)[::-1]
           ^^^^^^^^^^
SyntaxError: invalid syntax
11
2
